--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.5",
+    "@hookform/resolvers": "^2.9.10",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@next/font": "^13.0.6",
     "@tanstack/react-query": "^4.19.1",
@@ -23,8 +24,10 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
