--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@lukemorales/query-key-factory": "^1.0.3",
     "@next/font": "^13.0.6",
+    "@radix-ui/react-toast": "^1.1.2",
     "@tanstack/react-query": "^4.19.1",
     "@tanstack/react-query-devtools": "^4.19.1",
     "@types/node": "18.11.14",
