--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.1",
     "typescript": "4.9.4",
     "zod": "^3.20.2"
   },
